Fix: SEO contrast

--- a/app/components/Header/Header.module.scss
+++ b/app/components/Header/Header.module.scss
@@ -150,7 +150,7 @@
         transition: all 0.6s;
 
         &:hover {
-          filter: brightness(120%);
+          filter: var(--header--button--hover);
         }
 
         .icon {
